2006-08-05  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/imagemap/imap_ncsa.l: Do not declare a symbol "link"
	because this conflicts with the system call declared in
	<unistd.h>.  Renamed that symbol "imap_link".  Fixes bug #349589.

	* plug-ins/imagemap/imap_ncsa_lex.c: Updated by hand in order to
	avoid large changes introduced by more recent versions of flex.

2006-08-04  Raphaël Quinet  <raphael@gimp.org>

	* tools/pdbgen/stddefs.pdb
	* tools/pdbgen/pdb/convert.pdb: Attributed custom dither code to
	David Gowers and updated my e-mail address for the PDB.

	* app/pdb/convert_cmds.c
	* app/pdb/undo_cmds.c	
	* libgimp/gimpconvert_pdb.c: Regenerated.

2006-08-04  Raphaël Quinet  <raphael@gimp.org>

	* app/core/gimpimage-convert-data.h
	* app/core/gimpimage-convert.c
	* app/core/gimpimage-convert.h
	* tools/pdbgen/pdb/convert.pdb: Applied slightly modified patch
	from David Gowers allowing a custom dither matrix to be used when
	converting images to indexed mode.  Fixes bug #136604.
	
	* app/pdb/convert_cmds.c
	* app/pdb/internal_procs.c
	* libgimp/gimpconvert_pdb.h
	* libgimp/gimpconvert_pdb.c: Regenerated.

	* app/tools/gimpselectiontool.c: N_() should have been _().

2006-08-04  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimppropwidgets.c: some doc fixes.

2006-08-04  Michael Natterer  <mitch@gimp.org>

	* app/actions/image-actions.c: cosmetics.

	* app/core/gimpimage.c: factor common code out to new utility
	function gimp_image_get_item_by_tattoo(), minor cleanups.

2006-08-03  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpchannel.c (gimp_channel_bounds)
	* app/core/gimpdrawable.c (gimp_drawable_mask_bounds)
	(gimp_drawable_mask_intersect): allow to pass in NULL return
	locations for any of the boundary return values.

	* app/tools/gimpselectiontool.c (gimp_selection_tool_oper_update):
	don't require hovering the selection for moving the selected
	pixels, since this can be distinguished by looking at the